  references. So the source fields are the default and can be modified by the
  reference.

0.9.6
=====
- Added autofocus attribute in field configuration (Textfield only yet)
- Fixed getting values from checkbox and radio fields.
- Fixed getting accepted language from browser. Now using locale setting from
  evaluate response.
- Implement filtering on userdefined rules

0.9.5
=====
- Add special logic for ringo items when rendererd in info fields. In this
  case display the expanded values.
- Do not show any value in the password field.
- Set requirement to brabbel >= 0.2.6
- Improve generation of model generation based on form definition.
- Added option configure a locale for the form. This is needed to render form
  elements like the datepicker with the correct locale settings.

0.9.4
=====
- Add url_prefix as new parameter for forms. This prefix will be used to build
  correct urls in case the application which uses formbar is hosted in a
  subpath. (eg. example.com/foo).

0.9.3
=====
- Fixed demo server to make it start up again (Still some flaws in it).
- Worked on documentation.
- Some layout in forms.

0.9.2
=====
- Fixed getting values from select fields if no value is selected and the
  value may be empty. In this case the application send all options to the server.
- Do not include "nullable" when generate model definitions from form definition.
- Restructured documentation.

0.9.1
=====
- Add option to options to define a attribute of the item where to load the available
  options from.

0.9
===
- Set autocomplete="off" for password fields.
- Added serialisation of dates.
- Security fix: Fixed potential code injection issue by removing the rule
  parsing out of formbar and use brabbel library for rule parsing and
  evaluation.

0.8.3
=====
- Added translation for warning and error messages.
- Added translation of options in dropdown fields.
- Fixed "readonly" mode for select fields. Select fields need a disabled