@@ -14,6 +14,7 @@ TODO
 - Fixed getting accepted language from browser. Now using locale setting from
   evaluate response.
 - Implement filtering on userdefined rules
+- Added some client side checks if the eval_expr will be valid.
 
 0.9.5
 =====
